mc_parser.output
Terminals unused in grammar

   IN
   LIKE
   REGEXP
   BETWEEN
   '|'
   '&'
   '^'
   UPPER
   LOWER
   WORD
   NEWLINE
   HLH
   ADD
   ALL
   ALTER
   ANALYZE
   AND
   ANY
   AS
   ASC
   AUTO_INCREMENT
   BEFORE
   BIGINT
   BIT
   BLOB
   BOTH
   BY
   CALL
   CASCADE
   CASE
   CHANGE
   CHECK
   COLUMN
   COMMENT
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CROSS
   CURRENT_DATE
   CURRENT_TIME
   CURRENT_TIMESTAMP
   CURRENT_USER
   CURSOR
   DATABASE
   DATABASES
   DATE
   DATETIME
   DAY_HOUR
   DAY_MICROSECOND
   DAY_MINUTE
   DAY_SECOND
   DECIMAL
   DECLARE
   DEFAULT
   DELAYED
   DESC
   DESCRIBE
   DETERMINISTIC
   DISTINCT
   DISTINCTROW
   DIV
   DUAL
   EACH
   ELSE
   ELSEIF
   ENCLOSED
   ENUM
   ESCAPED
   EXIT
   EXPLAIN
   FETCH
   FOR
   FORCE
   FOREIGN
   FULLTEXT
   GRANT
   GROUP
   HAVING
   HIGH_PRIORITY
   HOUR_MICROSECOND
   HOUR_MINUTE
   HOUR_SECOND
   IF
   IGNORE
   INFILE
   INNER
   INOUT
   INSENSITIVE
   INTERVAL
   ITERATE
   JOIN
   KEYS
   KILL
   LEADING
   LEAVE
   LEFT
   LIMIT
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LONGBLOB
   LONGTEXT
   LOOP
   LOW_PRIORITY
   MATCH
   MEDIUMBLOB
   MEDIUMINT
   MEDIUMTEXT
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NATURAL
   NO_WRITE_TO_BINLOG
   NUMBER
   ONDUPLICATE
   OPTIMIZE
   OPTION
   OPTIONALLY
   ORDER
   OUT
   OUTER
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   QUICK
   READ
   READS
   REAL
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REPLACE
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   RIGHT
   ROLLUP
   SCHEMA
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SMALLINT
   SOME
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SQL_BIG_RESULT
   SQL_CALC_FOUND_ROWS
   SQL_SMALL_RESULT
   SSL
   STARTING
   STRAIGHT_JOIN
   TEMPORARY
   TERMINATED
   THEN
   TINYINT
   TINYTEXT
   TO
   TRAILING
   TRIGGER
   UNDO
   UNION
   UNLOCK
   UPDATE
   USAGE
   USE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARBINARY
   VARYING
   WHEN
   WHILE
   WITH
   WRITE
   FSUBSTRING
   FTRIM
   FDATE_ADD
   FDATE_SUB
   FCOUNT


State 197 conflicts: 1 shift/reduce


Grammar

    0 $accept: stmt_list "end of file"

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 stmt: select_stmt
    4     | QUIT
    5     | show TABLE
    6     | desc TABLE NAME

    7 select_stmt: SELECT select_expr_list FROM table_references opt_where

    8 opt_where: %empty
    9          | WHERE expr

   10 column_list: NAME
   11            | column_list ',' NAME

   12 select_expr_list: select_expr
   13                 | select_expr_list ',' select_expr
   14                 | '*'

   15 select_expr: expr

   16 table_references: table_reference
   17                 | table_references ',' table_reference

   18 table_reference: table_factor

   19 table_factor: NAME

   20 stmt: delete_stmt

   21 delete_stmt: DELETE delete_opts FROM NAME opt_where

   22 delete_opts: %empty

   23 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

   24 delete_list: NAME opt_dot_star
   25            | delete_list ',' NAME opt_dot_star

   26 opt_dot_star: %empty
   27             | '.' '*'

   28 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

   29 stmt: insert_stmt

   30 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list

   31 insert_opts: %empty

   32 opt_into: INTO
   33         | %empty

   34 opt_col_names: %empty
   35              | '(' column_list ')'

   36 insert_vals_list: '(' insert_vals ')'
   37                 | insert_vals_list ',' '(' insert_vals ')'

   38 insert_vals: INTNUM
   39            | APPROXNUM
   40            | STRING
   41            | insert_vals ',' insert_vals

   42 stmt: create_index_stmt

   43 create_index_stmt: CREATE KEY NAME ON NAME '(' NAME ')'

   44 stmt: drop_index_stmt

   45 drop_index_stmt: DROP KEY NAME

   46 stmt: drop_table_stmt

   47 drop_table_stmt: DROP TABLE NAME

   48 stmt: create_table_stmt

   49 create_table_stmt: CREATE TABLE NAME '(' create_col_list ')'

   50 create_col_list: create_definition
   51                | create_col_list ',' create_definition

   52 $@1: %empty

   53 create_definition: $@1 NAME data_type column_atts
   54                  | PRIMARY KEY '(' NAME ')'
   55                  | KEY '(' column_list ')'
   56                  | INDEX '(' NAME ')'

   57 column_atts: %empty
   58            | column_atts NOT NULLX
   59            | column_atts NULLX
   60            | column_atts UNIQUE
   61            | column_atts PRIMARY KEY

   62 opt_length: %empty
   63           | '(' INTNUM ')'
   64           | '(' INTNUM ',' INTNUM ')'

   65 opt_binary: %empty
   66           | BINARY

   67 opt_uz: %empty
   68       | opt_uz UNSIGNED

   69 opt_csc: %empty
   70        | opt_csc CHAR SET STRING
   71        | opt_csc COLLATE STRING

   72 data_type: INT opt_length opt_uz
   73          | INTEGER opt_length opt_uz
   74          | DOUBLE opt_length opt_uz
   75          | FLOAT opt_length opt_uz
   76          | CHAR opt_length opt_csc
   77          | VARCHAR '(' INTNUM ')' opt_csc
   78          | TEXT opt_binary opt_csc

   79 expr: NAME
   80     | STRING
   81     | INTNUM
   82     | APPROXNUM
   83     | BOOL
   84     | expr '+' expr
   85     | expr '-' expr
   86     | expr '*' expr
   87     | expr '/' expr
   88     | expr '%' expr
   89     | expr MOD expr
   90     | '-' expr
   91     | expr ANDOP expr
   92     | expr OR expr
   93     | expr XOR expr
   94     | expr COMPARISON expr
   95     | expr COMPARISON '(' select_stmt ')'
   96     | NOT expr
   97     | '!' expr
   98     | USERVAR ASSIGN expr
   99     | expr IS NULLX
  100     | expr IS NOT NULLX
  101     | expr IS BOOL
  102     | expr IS NOT BOOL


Terminals, with rules where they appear

"end of file" (0) 0
'!' (33) 97
'%' (37) 88
'&' (38)
'(' (40) 35 36 37 43 49 54 55 56 63 64 77 95
')' (41) 35 36 37 43 49 54 55 56 63 64 77 95
'*' (42) 14 27 86
'+' (43) 84
',' (44) 11 13 17 25 37 41 51 64
'-' (45) 85 90
'.' (46) 27
'/' (47) 87
';' (59) 1 2
'^' (94)
'|' (124)
error (256)
ASSIGN (258) 98
OR (259) 92
XOR (260) 93
ANDOP (261) 91
IN (262)
IS (263) 99 100 101 102
LIKE (264)
REGEXP (265)
NOT (266) 58 96 100 102
BETWEEN (267)
COMPARISON (268) 94 95
MOD (269) 89
UMINUS (270)
UPPER (271)
LOWER (272)
WORD (273)
NEWLINE (274)
HLH (275)
NAME (276) 6 10 11 19 21 24 25 30 43 45 47 49 53 54 56 79
STRING (277) 40 70 71 80
INTNUM (278) 38 63 64 77 81
BOOL (279) 83 101 102
APPROXNUM (280) 39 82
USERVAR (281) 98
ADD (282)
ALL (283)
ALTER (284)
ANALYZE (285)
AND (286)
ANY (287)
AS (288)
ASC (289)
AUTO_INCREMENT (290)
BEFORE (291)
BIGINT (292)
BINARY (293) 66
BIT (294)
BLOB (295)
BOTH (296)
BY (297)
CALL (298)
CASCADE (299)
CASE (300)
CHANGE (301)
CHAR (302) 70 76
CHECK (303)
COLLATE (304) 71
COLUMN (305)
COMMENT (306)
CONDITION (307)
CONSTRAINT (308)
CONTINUE (309)
CONVERT (310)
CREATE (311) 43 49
CROSS (312)
CURRENT_DATE (313)
CURRENT_TIME (314)
CURRENT_TIMESTAMP (315)
CURRENT_USER (316)
CURSOR (317)
DATABASE (318)
DATABASES (319)
DATE (320)
DATETIME (321)
DAY_HOUR (322)
DAY_MICROSECOND (323)
DAY_MINUTE (324)
DAY_SECOND (325)
DECIMAL (326)
DECLARE (327)
DEFAULT (328)
DELAYED (329)
DELETE (330) 21 23 28
DESC (331)
DESCRIBE (332)
DETERMINISTIC (333)
DISTINCT (334)
DISTINCTROW (335)
DIV (336)
DOUBLE (337) 74
DROP (338) 45 47
DUAL (339)
EACH (340)
ELSE (341)
ELSEIF (342)
ENCLOSED (343)
ENUM (344)
ESCAPED (345)
EXIT (346)
EXPLAIN (347)
FETCH (348)
FLOAT (349) 75
FOR (350)
FORCE (351)
FOREIGN (352)
FROM (353) 7 21 23 28
FULLTEXT (354)
GRANT (355)
GROUP (356)
HAVING (357)
HIGH_PRIORITY (358)
HOUR_MICROSECOND (359)
HOUR_MINUTE (360)
HOUR_SECOND (361)
IF (362)
IGNORE (363)
INDEX (364) 56
INFILE (365)
INNER (366)
INOUT (367)
INSENSITIVE (368)
INSERT (369) 30
INT (370) 72
INTEGER (371) 73
INTERVAL (372)
INTO (373) 32
ITERATE (374)
JOIN (375)
KEY (376) 43 45 54 55 61
KEYS (377)
KILL (378)
LEADING (379)
LEAVE (380)
LEFT (381)
LIMIT (382)
LINES (383)
LOAD (384)
LOCALTIME (385)
LOCALTIMESTAMP (386)
LOCK (387)
LONG (388)
LONGBLOB (389)
LONGTEXT (390)
LOOP (391)
LOW_PRIORITY (392)
MATCH (393)
MEDIUMBLOB (394)
MEDIUMINT (395)
MEDIUMTEXT (396)
MINUTE_MICROSECOND (397)
MINUTE_SECOND (398)
MODIFIES (399)
NATURAL (400)
NO_WRITE_TO_BINLOG (401)
NULLX (402) 58 59 99 100
NUMBER (403)
ON (404) 43
ONDUPLICATE (405)
OPTIMIZE (406)
OPTION (407)
OPTIONALLY (408)
ORDER (409)
OUT (410)
OUTER (411)
OUTFILE (412)
PRECISION (413)
PRIMARY (414) 54 61
PROCEDURE (415)
PURGE (416)
QUICK (417)
READ (418)
READS (419)
REAL (420)
REFERENCES (421)
RELEASE (422)
RENAME (423)
REPEAT (424)
REPLACE (425)
REQUIRE (426)
RESTRICT (427)
RETURN (428)
REVOKE (429)
RIGHT (430)
ROLLUP (431)
SCHEMA (432)
SCHEMAS (433)
SECOND_MICROSECOND (434)
SELECT (435) 7
SENSITIVE (436)
SEPARATOR (437)
SET (438) 70
SHOW (439)
SMALLINT (440)
SOME (441)
SONAME (442)
SPATIAL (443)
SPECIFIC (444)
SQL (445)
SQLEXCEPTION (446)
SQLSTATE (447)
SQLWARNING (448)
SQL_BIG_RESULT (449)
SQL_CALC_FOUND_ROWS (450)
SQL_SMALL_RESULT (451)
SSL (452)
STARTING (453)
STRAIGHT_JOIN (454)
TABLE (455) 5 6 47 49
TEMPORARY (456)
TEXT (457) 78
TERMINATED (458)
THEN (459)
TINYINT (460)
TINYTEXT (461)
TO (462)
TRAILING (463)
TRIGGER (464)
UNDO (465)
UNION (466)
UNIQUE (467) 60
UNLOCK (468)
UNSIGNED (469) 68
UPDATE (470)
USAGE (471)
USE (472)
USING (473) 28
UTC_DATE (474)
UTC_TIME (475)
UTC_TIMESTAMP (476)
VALUES (477) 30
VARBINARY (478)
VARCHAR (479) 77
VARYING (480)
WHEN (481)
WHERE (482) 9
WHILE (483)
WITH (484)
WRITE (485)
QUIT (486) 4
FSUBSTRING (487)
FTRIM (488)
FDATE_ADD (489)
FDATE_SUB (490)
FCOUNT (491)
show (492) 5
desc (493) 6


Nonterminals, with rules where they appear

$accept (253)
    on left: 0
stmt_list (254)
    on left: 1 2, on right: 0 2
stmt (255)
    on left: 3 4 5 6 20 29 42 44 46 48, on right: 1 2
select_stmt (256)
    on left: 7, on right: 3 95
opt_where (257)
    on left: 8 9, on right: 7 21 23 28
column_list (258)
    on left: 10 11, on right: 11 35 55
select_expr_list (259)
    on left: 12 13 14, on right: 7 13
select_expr (260)
    on left: 15, on right: 12 13
table_references (261)
    on left: 16 17, on right: 7 17 23 28
table_reference (262)
    on left: 18, on right: 16 17
table_factor (263)
    on left: 19, on right: 18
delete_stmt (264)
    on left: 21 23 28, on right: 20
delete_opts (265)
    on left: 22, on right: 21 23 28
delete_list (266)
    on left: 24 25, on right: 23 25 28
opt_dot_star (267)
    on left: 26 27, on right: 24 25
insert_stmt (268)
    on left: 30, on right: 29
insert_opts (269)
    on left: 31, on right: 30
opt_into (270)
    on left: 32 33, on right: 30
opt_col_names (271)
    on left: 34 35, on right: 30
insert_vals_list (272)
    on left: 36 37, on right: 30 37
insert_vals (273)
    on left: 38 39 40 41, on right: 36 37 41
create_index_stmt (274)
    on left: 43, on right: 42
drop_index_stmt (275)
    on left: 45, on right: 44
drop_table_stmt (276)
    on left: 47, on right: 46
create_table_stmt (277)
    on left: 49, on right: 48
create_col_list (278)
    on left: 50 51, on right: 49 51
create_definition (279)
    on left: 53 54 55 56, on right: 50 51
$@1 (280)
    on left: 52, on right: 53
column_atts (281)
    on left: 57 58 59 60 61, on right: 53 58 59 60 61
opt_length (282)
    on left: 62 63 64, on right: 72 73 74 75 76
opt_binary (283)
    on left: 65 66, on right: 78
opt_uz (284)
    on left: 67 68, on right: 68 72 73 74 75
opt_csc (285)
    on left: 69 70 71, on right: 70 71 76 77 78
data_type (286)
    on left: 72 73 74 75 76 77 78, on right: 53
expr (287)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102, on right: 9 15 84 85 86 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102


State 0

    0 $accept: . stmt_list "end of file"

    CREATE  shift, and go to state 1
    DELETE  shift, and go to state 2
    DROP    shift, and go to state 3
    INSERT  shift, and go to state 4
    SELECT  shift, and go to state 5
    QUIT    shift, and go to state 6
    show    shift, and go to state 7
    desc    shift, and go to state 8

    stmt_list          go to state 9
    stmt               go to state 10
    select_stmt        go to state 11
    delete_stmt        go to state 12
    insert_stmt        go to state 13
    create_index_stmt  go to state 14
    drop_index_stmt    go to state 15
    drop_table_stmt    go to state 16
    create_table_stmt  go to state 17


State 1

   43 create_index_stmt: CREATE . KEY NAME ON NAME '(' NAME ')'
   49 create_table_stmt: CREATE . TABLE NAME '(' create_col_list ')'

    KEY    shift, and go to state 18
    TABLE  shift, and go to state 19


State 2

   21 delete_stmt: DELETE . delete_opts FROM NAME opt_where
   23            | DELETE . delete_opts delete_list FROM table_references opt_where
   28            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 22 (delete_opts)

    delete_opts  go to state 20


State 3

   45 drop_index_stmt: DROP . KEY NAME
   47 drop_table_stmt: DROP . TABLE NAME

    KEY    shift, and go to state 21
    TABLE  shift, and go to state 22


State 4

   30 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list

    $default  reduce using rule 31 (insert_opts)

    insert_opts  go to state 23


State 5

    7 select_stmt: SELECT . select_expr_list FROM table_references opt_where

    NOT        shift, and go to state 24
    '!'        shift, and go to state 25
    '-'        shift, and go to state 26
    '*'        shift, and go to state 27
    NAME       shift, and go to state 28
    STRING     shift, and go to state 29
    INTNUM     shift, and go to state 30
    BOOL       shift, and go to state 31
    APPROXNUM  shift, and go to state 32
    USERVAR    shift, and go to state 33

    select_expr_list  go to state 34
    select_expr       go to state 35
    expr              go to state 36


State 6

    4 stmt: QUIT .

    $default  reduce using rule 4 (stmt)


State 7

    5 stmt: show . TABLE

    TABLE  shift, and go to state 37


State 8

    6 stmt: desc . TABLE NAME

    TABLE  shift, and go to state 38


State 9

    0 $accept: stmt_list . "end of file"
    2 stmt_list: stmt_list . stmt ';'

    "end of file"  shift, and go to state 39
    CREATE         shift, and go to state 1
    DELETE         shift, and go to state 2
    DROP           shift, and go to state 3
    INSERT         shift, and go to state 4
    SELECT         shift, and go to state 5
    QUIT           shift, and go to state 6
    show           shift, and go to state 7
    desc           shift, and go to state 8

    stmt               go to state 40
    select_stmt        go to state 11
    delete_stmt        go to state 12
    insert_stmt        go to state 13
    create_index_stmt  go to state 14
    drop_index_stmt    go to state 15
    drop_table_stmt    go to state 16
    create_table_stmt  go to state 17


State 10

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 41


State 11

    3 stmt: select_stmt .

    $default  reduce using rule 3 (stmt)


State 12

   20 stmt: delete_stmt .

    $default  reduce using rule 20 (stmt)


State 13

   29 stmt: insert_stmt .

    $default  reduce using rule 29 (stmt)


State 14

   42 stmt: create_index_stmt .

    $default  reduce using rule 42 (stmt)


State 15

   44 stmt: drop_index_stmt .

    $default  reduce using rule 44 (stmt)


State 16

   46 stmt: drop_table_stmt .

    $default  reduce using rule 46 (stmt)


State 17

   48 stmt: create_table_stmt .

    $default  reduce using rule 48 (stmt)


State 18

   43 create_index_stmt: CREATE KEY . NAME ON NAME '(' NAME ')'

    NAME  shift, and go to state 42


State 19

   49 create_table_stmt: CREATE TABLE . NAME '(' create_col_list ')'

    NAME  shift, and go to state 43


State 20

   21 delete_stmt: DELETE delete_opts . FROM NAME opt_where
   23            | DELETE delete_opts . delete_list FROM table_references opt_where
   28            | DELETE delete_opts . FROM delete_list USING table_references opt_where

    NAME  shift, and go to state 44
    FROM  shift, and go to state 45

    delete_list  go to state 46


State 21

   45 drop_index_stmt: DROP KEY . NAME

    NAME  shift, and go to state 47


State 22

   47 drop_table_stmt: DROP TABLE . NAME

    NAME  shift, and go to state 48


State 23

   30 insert_stmt: INSERT insert_opts . opt_into NAME opt_col_names VALUES insert_vals_list

    INTO  shift, and go to state 49
